@@ -1,19 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright 2013 ArcBees Inc.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
-  ~ use this file except in compliance with the License. You may obtain a copy of
-  ~ the License at
-  ~
-  ~ http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-  ~ License for the specific language governing permissions and limitations under
-  ~ the License.
-  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,11 +10,12 @@
 
     <groupId>com.arcbees.gquery</groupId>
     <artifactId>gquery-plugins</artifactId>
-    <version>0.1-alpha-13-SNAPSHOT</version>
+    <version>0.1-alpha-14-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>tooltip</module>
+        <module>tooltip-sample</module>
     </modules>
 
     <name>ArcBees GQuery Plugins</name>
@@ -52,6 +38,17 @@
     </licenses>
 
     <developers>
+        <developer>
+            <id>jDramaix</id>
+            <name>Julien Dramaix</name>
+            <email>julien.dramaix@gmail.com</email>
+            <organization>ArcBees</organization>
+            <organizationUrl>http://arcbees.com</organizationUrl>
+            <roles>
+                <role>Lead developer</role>
+            </roles>
+            <timezone>+1</timezone>
+        </developer>
         <developer>
             <id>branflake2267</id>
             <name>Brandon Donnelson</name>
@@ -80,9 +77,12 @@
         <!-- client -->
         <gquery.version>1.3.1</gquery.version>
         <gwt.version>2.5.0</gwt.version>
-        <gwt.maven.version>2.5.0</gwt.maven.version>
         <gwt.style>OBF</gwt.style>
         <junit.version>4.11</junit.version>
+
+        <gwt.maven.version>2.5.0</gwt.maven.version>
+        <maven-javadoc-plugin.version>2.9</maven-javadoc-plugin.version>
+        <github.version>0.7</github.version>
 
         <!-- maven -->
         <target.jdk>1.6</target.jdk>
@@ -116,9 +116,107 @@
                     <arguments>-Psonatype-oss-release -Prelease -Dgpg.passphrase=${gpg.passphrase}</arguments>
                 </configuration>
             </plugin>
+
+            <!-- run 'mvn javadoc:aggregate' to generate -->
+            <!-- run 'mvn javadoc:aggregate -X' to debug -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <maxmemory>2048</maxmemory>
+                    <failOnError>true</failOnError>
+                    <doctitle>ArcBees GQuery Tooltip Javadocs</doctitle>
+                    <links>
+                        <link>http://download.oracle.com/javase/6/docs/api/</link>
+                        <link>http://google-web-toolkit.googlecode.com/svn/javadoc/latest/</link>
+                        <link>http://gwtquery.googlecode.com/svn/trunk/gwtquery-core/javadoc/</link>
+                    </links>
+                    <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
+                    <reportOutputDirectory>${project.reporting.outputDirectory}/javadoc</reportOutputDirectory>
+                    <excludes>
+                        <exclude>**/*.txt</exclude>
+                    </excludes>
+                    <header>
+                        <![CDATA[
+                            <a href="https://github.com/ArcBees/ArcBees-GQuery-Plugins" target="_blank">ArcBees GQuery Plugins</a>
+                        ]]>
+                    </header>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build-upload-javadocs</id>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- run 'mvn site' to upload -->
+            <!-- run 'mvn site -X' to debug and upload. -->
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>${github.version}</version>
+                <configuration>
+                    <!-- <dryRun>true</dryRun> -->
+                    <message>Creating site for ${project.version}</message>
+                    <!-- github > sets the ~/.m2/setting.xml server id profile -->
+                    <server>github</server>
+                    <outputDirectory>${project.build.directory}/site</outputDirectory>
+                    <excludes>
+                        <exclude>*.DS_Store</exclude>
+                        <exclude>*.sh</exclude>
+                        <exclude>options</exclude>
+                        <exclude>packages</exclude>
+                        <exclude>WEB-INF/**</exclude>
+                        <exclude>META-INF/**</exclude>
+                    </excludes>
+                    <force>true</force>
+                    <merge>true</merge>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <!-- GWT -->
+                <!-- run 'mvn integration-test' for running the GwtTestSuite -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <version>${gwt.maven.version}</version>
+                    <configuration>
+                        <extraJvmArgs>-Xss1024k -Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
+                        <includes>**/*GwtTest.java</includes>
+                        <mode>htmlunit</mode>
+                        <testTimeOut>180</testTimeOut>
+                        <strict>true</strict>
+                        <style>${gwt.style}</style>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>test</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
-    
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -133,92 +231,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-    <distributionManagement>
-        <repository>
-            <id>sona-nexus-deploy</id> <!-- Add to settings.xml <server><id>sona-nexus-deploy</id> -->
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>
-        <snapshotRepository>
-            <id>sona-nexus-deploy</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <profiles>
-        <profile>
-            <id>sonatype-oss-release</id>
-            <modules>
-                <module>tooltip</module>
-            </modules>
-        </profile>
-
-        <profile>
-            <id>release</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <version>2.9</version>
-                            <executions>
-                                <execution>
-                                    <id>attach-javadocs</id>
-                                    <goals>
-                                        <goal>jar</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                            <configuration>
-                                <source>${target.jdk}</source>
-                                <failOnError>true</failOnError>
-                                <quiet>true</quiet>
-                                <links>
-                                    <link>http://download.oracle.com/javase/6/docs/api/</link>
-                                    <link>http://google-web-toolkit.googlecode.com/svn/javadoc/2.0/</link>
-                                    <link>http://aopalliance.sourceforge.net/doc/</link>
-                                </links>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-gpg-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>sign-artifacts</id>
-                                    <phase>verify</phase>
-                                    <goals>
-                                        <goal>sign</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-    </profiles>
 </project>
